# agentharnesses

./: CONTRIBUTING.md  LICENSE  README.md  package.json
.claude/hooks/: session-start.sh
.github/workflows/: pypi.yaml
docs/: CLAUDE.md  LICENSE  README.md  cli.mdx  clients.mdx  docs.json  home.mdx  specification.mdx  style.css
docs/client-implementation/: adding-harnesses-support.mdx
docs/harness-creation/: best-practices.mdx  evaluating-harnesses.mdx  optimizing-descriptions.mdx  organizing-large-harnesses.mdx  quickstart.mdx  using-scripts.mdx
examples/data-analyst-assistant/: HARNESS.md  README.md
examples/data-analyst-assistant/references/business-context/: REFERENCES.md  kpi-definitions.md  team-glossary.md
examples/data-analyst-assistant/references/data-sources/: REFERENCES.md  data-dictionary.md  known-data-issues.md  query-patterns.md
examples/data-analyst-assistant/skills/data-access/: SKILLS.md
examples/software-development-assistant/: HARNESS.md  README.md
examples/software-development-assistant/references/: architecture.md  conventions.md
examples/writing-publishing-assistant/: HARNESS.md  README.md
examples/writing-publishing-assistant/references/: style-guide.md  topic-index.md
harness-management-skills/create-harness/: SKILL.md
harness-management-skills/update-harness/: SKILL.md
harnesses-ref/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
harnesses-ref/src/harnesses_ref/: cli.py  errors.py  models.py  parser.py  prompt.py  validator.py
harnesses-ref/tests/: test_parser.py  test_prompt.py  test_validator.py
(+18 files in other folders)
