[project]
name = "harnesses-ref"
dynamic = ["version"]
description = "Reference library for Agent Harnesses"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "strictyaml>=1.7.3",
]

[project.scripts]
harnesses-ref = "harnesses_ref.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/harnesses_ref"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]
